--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  background: #fdfdfd;
-  color: #333;
+  background: #fff5ee;
+  color: #00269A;
 }
 
 header {
